# staffinit-ats

./: .dockerignore  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  manage.py  pyproject.toml  railway.json
ats/: admin.py  forms.py  models.py  tasks.py  test_anonymize.py  test_archive.py  test_candidates.py  test_contact.py  test_crm.py  test_cv_view.py  test_evaluate.py  test_ingestion.py  test_intake.py  test_kanban.py  test_review_fixes.py  test_scoring.py  test_screening.py  test_users.py  test_views.py  tests.py  urls.py  views.py
ats/ingestion/: ingest.py  parse.py
ats/management/commands/: seed_rubric.py
ats/migrations/: 0001_initial.py  0002_screeningset.py  0003_anonymizedcv.py  0004_evaluation.py  0005_candidateupload.py  0006_candidateupload_raw_file_alter_candidateupload_role.py  0007_stage_pipelinecard.py  0008_company_deal_dealdocument_person.py  0009_candidate_is_archived.py  0010_stage_uniq_stage_role_name.py  0011_company_is_archived.py  0012_deal_split_currency_and_rate_period.py
ats/scoring/: anonymize.py  contact.py  evaluate.py  jd_extract.py  orchestration.py  screening.py  service.py
ats/templates/ats/: _dropzone_js.html  anonymized_cv.html  base.html  candidate_list.html  company_detail.html  company_list.html  deal_detail.html  evaluation.html  role_detail.html  role_form.html  role_list.html  screening.html  user_list.html
ats/templates/registration/: login.html
ats/templatetags/: score_extras.py
evals/: run_eval.py
evals/golden_set/: cases.py
staffinit/: asgi.py  settings.py  urls.py  wsgi.py
