[project]
name = "staffinit-ats"
version = "0.1.0"
description = "StaffInit ATS — role-scoped persistent CV scorecard (system of record)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=5.2,<5.3",
    "psycopg[binary]>=3.2",
    "dj-database-url>=2.3",
    "python-dotenv>=1.0",
    "anthropic>=0.105.2",
    "procrastinate[django]>=3.8.1",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
